--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-topo></app-topo>
-<app-home></app-home>
+<router-outlet></router-outlet>
+<!-- <app-home></app-home> -->
+<!-- <app-restaurante></app-restaurante> -->
+<!-- <app-diversao></app-diversao> -->
 <app-rodape></app-rodape>
