--- a/src/app/restaurante/restaurante.component.html
+++ b/src/app/restaurante/restaurante.component.html
@@ -9,7 +9,7 @@
 
   <div class="row" *ngFor="let oferta of ofertas">
     <div class="col-md-4">
-      <img class="img-fluid" src="{{ oferta.imagens[0].url }}" />
+      <img class="img-fluid" [src]="oferta.imagens[0].url" />
     </div>
 
     <div class="col-md-8">
