--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
           <h4 class="card-title">{{ oferta.title }}</h4>
           <p class="card-text">{{ oferta.descricao_oferta }}</p>
           <p class="preco">{{ oferta.valor | currency: 'USD'}}</p>
-          <a href="#" class="btn btn-outline-primary">Ver oferta</a>
+          <a [routerLink]="['/oferta', oferta.id]" class="btn btn-outline-primary">Ver oferta</a>
         </div>
       </div>
     </div>
