--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -43,4 +43,21 @@
     </div>
 
   </div>
+  <div class="row">
+    <div class="col">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" id="home-tab" data-toggle="tab" [routerLink]="['como-usar']" role="tab" aria-controls="home" aria-selected="true">Como usar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" data-toggle="tab" [routerLink]="['onde-fica']" role="tab">Onde Fica</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <router-outlet></router-outlet>
+        <!-- <div class="tab-pane fade show active" id="como-usar">Como usar</div>
+        <div class="tab-pane fade" id="onde-fica">Onde Fica</div> -->
+      </div>
+    </div>
+  </div>
 </div>
