--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -13,7 +13,7 @@
           class="form-control" 
           placeholder="Pesquise por Ofertas" 
           #termoDPesquisa
-          (key-up)="pesquisa(termoDPesquisa)" />
+          (keyup)="pesquisa(termoDPesquisa.value)" />
         </div>
         <div class="col-md-2">
           <a a href="#"><img src="/assets/carrinho.png" /></a>
