--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -14,6 +14,9 @@
           placeholder="Pesquise por Ofertas" 
           #termoDPesquisa
           (keyup)="pesquisa(termoDPesquisa.value)" />
+          <ul class="list-group" style="position: absolute;">
+            <li class="list-group-item" *ngFor="let oferta of list_ofertas">{{ oferta.titulo }}</li>
+          </ul>
         </div>
         <div class="col-md-2">
           <a a href="#"><img src="/assets/carrinho.png" /></a>
