--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -15,7 +15,9 @@
           #termoDPesquisa
           (keyup)="pesquisa(termoDPesquisa.value)" />
           <ul class="list-group" style="position: absolute;">
-            <li class="list-group-item" *ngFor="let oferta of list_ofertas">{{ oferta.titulo }}</li>
+            <li class="list-group-item" *ngFor="let oferta of ofertas | async">
+              <a (click)="limpaPesquisa" [routerLink]="['/oferta', oferta.id]">{{ oferta.titulo | descricaoReduzida:15 }}</a>
+            </li>
           </ul>
         </div>
         <div class="col-md-2">
