--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -118,7 +118,7 @@
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
+      <button (click)="confirmarCompra()" type="button" class="btn btn-primary btn-lg">Cofirmar compra</button>
     </form>
   </div>
 </div>
