--- a/src/app/ordem-compra/old/ordem-compra_1.component.html
+++ b/src/app/ordem-compra/old/ordem-compra_1.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="ordem-compra">
+  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined" >
     <form novalidate>
-    
+
       <h5>Sua Compra</h5>
       <hr />
 
@@ -11,8 +11,7 @@
         </div>
         <div class="form-group col-sm-6">
           Super Burger
-          <br />
-          Rodízio de Mini-hambúrger com opção de entrada.
+          <br /> Rodízio de Mini-hambúrger com opção de entrada.
         </div>
 
         <div>
@@ -29,15 +28,14 @@
           29.90
         </div>
       </div>
-      
+
       <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
           <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
         </div>
         <div class="form-group col-sm-6">
           Estância das águas
-          <br />
-          Diversão garantida com piscinas, trilhas e muito mais.
+          <br /> Diversão garantida com piscinas, trilhas e muito mais.
         </div>
 
         <div>
@@ -54,7 +52,7 @@
           31.90
         </div>
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -70,35 +68,34 @@
 
         <div class="form-group col-md-6">
           <input 
-            type="text" 
-            class="form-control is-invalid" 
-            placeholder="Endereço" 
-            autocomplete="off" 
-            minlength="5" 
-            required
-          >
-          <small class="form-text text-danger">Endereço inválido</small>
+          type="text" 
+          [value]="endereco" 
+          #inputEndereco 
+          (input)="atualizarEndereco(inputEndereco.value)" 
+          class="form-control {{ enderecoValido ? 'is-valid' : 'is-invalid' }}" 
+          placeholder="Endereço" 
+          autocomplete="off" 
+          minlength="5" 
+          required>
+          <div class="invalid-feedback">Endereço inválido</div>
         </div>
 
         <div class="form-group col-md-2">
-          <input 
-            type="text" 
-            class="form-control is-valid" 
-            placeholder="Número" 
-            autocomplete="off" 
-            minlength="1"
-            required
-          >
-          <small class="form-text text-success">Ok</small>
+          <input type="text" 
+          [value]="numero" 
+          #inputNumero 
+          (input)="atualizarNumero(inputNumero.value)"
+          class="form-control {{ numeroValido ? 'is-valid' : 'is-invalid' }}" 
+          placeholder="Número" 
+          autocomplete="off" 
+          minlength="1" 
+          required>
+          <br />
+          <small class="form-text text-muted">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Complemento" 
-            autocomplete="off"
-          >
+          <input type="text" [value]="complemento" #inputComplemento (input)="atualizarComplemento(inputComplemento.value)" class="form-control" placeholder="Complemento" autocomplete="off">
         </div>
 
       </div>
@@ -108,24 +105,23 @@
       <hr />
 
       <div class="form-row">
-          
+
         <div class="form-group col-md-3">
-          <select 
-            class="form-control is-invalid"
-          >
+          <select #changeFormaPagamento (change)="atualizarFormaPagamento(changeFormaPagamento.value)" class="form-control {{ formaPagamentoValido ? 'is-valid' : 'is-invalid' }}">
             <option value="">Selecione uma opção</option>
-            <option value="dinheiro">Dinheiro</option>
-            <option value="debito">Débito</option>
+            <option selected="{{ formaPagamento == 'dinheiro' ? 'selected' : '' }}">Dinheiro</option>
+            <option selected="{{ formaPagamento == 'debito' ? 'selected' : '' }}">Débito</option>
           </select>
-          <small class="form-text text-danger">Forma de pagamento inválida</small>
+
+          <div class="invalid-feedback">Selecione uma forma de pagamento</div>
         </div>
       </div>
 
       <hr />
-      <button 
-        type="button" 
-        class="btn btn-primary btn-lg"
-      >Cofirmar compra</button>
+      <button (click)="confirmarCompra()" type="button" class="btn btn-primary btn-lg">Cofirmar compra</button>
     </form>
+  </div>
+  <div class=ordem-compra *ngIf="idPedidoCompra !== undefined">
+    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra" ></app-ordem-compra-sucesso>
   </div>
 </div>
