--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="ordem-compra">
-    <form novalidate>
+  <div class="ordem-compra"*ngIf="idPedidoCompra === undefined">
+    <form #formulario="ngForm" (ngSubmit)="confirmarCompra(formulario)"ovalidate>
     
       <h5>Sua Compra</h5>
       <hr />
@@ -61,8 +61,6 @@
         </div>
       </div>
       <br />
-
-
       <h5>Dados de entrega</h5>
       <hr />
 
@@ -71,23 +69,29 @@
         <div class="form-group col-md-6">
           <input 
             type="text" 
-            class="form-control is-invalid" 
+            class="form-control" 
             placeholder="Endereço" 
             autocomplete="off" 
             minlength="5" 
             required
+            name="endereco"
+            ngModel
+            #inputEndereco="ngModel"
           >
-          <small class="form-text text-danger">Endereço inválido</small>
+          <small *ngIf="inputEndereco.valid && inputEndereco.touched" class="form-text text-sucess">Ok</small>
+          <small *ngIf="!inputEndereco.valid && inputEndereco.touched" class="form-text text-danger">E-mail Inválido</small>
         </div>
 
         <div class="form-group col-md-2">
           <input 
             type="text" 
-            class="form-control is-valid" 
+            class="form-control" 
             placeholder="Número" 
             autocomplete="off" 
             minlength="1"
             required
+            name="numero"
+            ngModel
           >
           <small class="form-text text-success">Ok</small>
         </div>
@@ -98,6 +102,8 @@
             class="form-control" 
             placeholder="Complemento" 
             autocomplete="off"
+            name="complemento"
+            ngModel
           >
         </div>
 
@@ -111,7 +117,9 @@
           
         <div class="form-group col-md-3">
           <select 
-            class="form-control is-invalid"
+            class="form-control"
+            name="formaPagamento"
+            ngModel
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
@@ -123,9 +131,12 @@
 
       <hr />
       <button 
-        type="button" 
+        type="submit" 
         class="btn btn-primary btn-lg"
       >Cofirmar compra</button>
     </form>
+  </div>
+  <div class="order-compra" *ngIf="idPedidoCompra !== undefined">
+    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
   </div>
 </div>
