--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="ordem-compra"*ngIf="idPedidoCompra === undefined">
-    <form #formulario="ngForm" (ngSubmit)="confirmarCompra(formulario)"ovalidate>
+  <div class="ordem-compra" *ngIf="idPedidoCompra == undefined">
+    <form [formGroup]="formulario" (ngSubmit)="confirmarCompra()" novalidate>
     
       <h5>Sua Compra</h5>
       <hr />
@@ -61,6 +61,7 @@
         </div>
       </div>
       <br />
+
       <h5>Dados de entrega</h5>
       <hr />
 
@@ -72,14 +73,10 @@
             class="form-control" 
             placeholder="Endereço" 
             autocomplete="off" 
-            minlength="5" 
-            required
-            name="endereco"
-            ngModel
-            #inputEndereco="ngModel"
+            formControlName="endereco"
           >
-          <small *ngIf="inputEndereco.valid && inputEndereco.touched" class="form-text text-sucess">Ok</small>
-          <small *ngIf="!inputEndereco.valid && inputEndereco.touched" class="form-text text-danger">E-mail Inválido</small>
+          <small *ngIf="formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-danger">E-mail inválido</small>
         </div>
 
         <div class="form-group col-md-2">
@@ -87,11 +84,8 @@
             type="text" 
             class="form-control" 
             placeholder="Número" 
-            autocomplete="off" 
-            minlength="1"
-            required
-            name="numero"
-            ngModel
+            autocomplete="off"
+            formControlName="numero"
           >
           <small class="form-text text-success">Ok</small>
         </div>
@@ -102,8 +96,7 @@
             class="form-control" 
             placeholder="Complemento" 
             autocomplete="off"
-            name="complemento"
-            ngModel
+            formControlName="complemento"
           >
         </div>
 
@@ -118,14 +111,13 @@
         <div class="form-group col-md-3">
           <select 
             class="form-control"
-            name="formaPagamento"
-            ngModel
+            formControlName="formaPagamento"
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small class="form-text text-danger">Forma de pagamento inválida</small>
+          <small class="form-text text-success">Ok</small>
         </div>
       </div>
 
@@ -133,10 +125,13 @@
       <button 
         type="submit" 
         class="btn btn-primary btn-lg"
+        [disabled]="!formulario.valid"
       >Cofirmar compra</button>
     </form>
   </div>
-  <div class="order-compra" *ngIf="idPedidoCompra !== undefined">
-    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
+  <div class="ordem-compra">
+    <div *ngIf="idPedidoCompra !== undefined">
+      <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
+    </div>
   </div>
 </div>
